--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Barbershop Borodinsky</title>
 </head>
-<body>
-  
+
+<body class="page__body">
+  <header class="page-header">
+    <a class="page-header__logo" href="#">
+      <img src="img/logotype-mobile.svg" alt="Barbershop Borodisky" width="226" height="30">
+    </a>
+    <nav class="main-nav">
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active">
+          <a href="#">Main</a>
+        </li>
+        <li class="site-list__item">
+          <a href="photo.html">Portfolio</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">Form</a>
+        </li>
+        <li class="site-list__item">
+          <a href="contacts.html">Contacts</a>
+        </li>
+        <li class="site-list__item">
+          <a href="https://htmlacademy.com">HTML ACADEMY</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 </body>
+
 </html>
