--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo" href="#">
-      <img src="img/logotype-mobile.svg" alt="Barbershop Borodisky" width="226" height="30">
+    <a href="#" class="page-header__logo">
+      <img src="img/logotype-mobile.svg" alt="Barbershop Borodinsky" width="226" height="30">
     </a>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
@@ -28,11 +28,66 @@
           <a href="contacts.html">Contacts</a>
         </li>
         <li class="site-list__item">
-          <a href="https://htmlacademy.com">HTML ACADEMY</a>
+          <a href="htmlacademy.com">HTML ACADEMY</a>
+        </li>
+      </ul>
+      <ul class="main-nav__list user-list">
+        <li class="user-list__item">
+          <a class="user-list__login js-login" href="login.html">Enter</a>
         </li>
       </ul>
     </nav>
   </header>
+  <main class="page-main">
+    <h1 class="visually-hidden">Барбершоп "Бородинский" - истинно мужская классика!</h1>
+    <section class="stats">
+      <header class="stats__header">
+        <h2 class="visually-hidden">Статистика Барбершопа</h2>
+        <p class="stats__slogan">Стрижка у нас - это выгодно!</p>
+        <p class="stats__intro">Мужская стрижка требует<br> точного подхода. Обратимся <br> к стятистике:</p>
+        <p class="stats__legends stats__legends--top">
+          <small>*- приведенные данные - ложь</small>
+        </p>
+      </header>
+      <dl class="stats__list" >
+        <div class="stats__item">
+          <dt class="stats__number">
+            1500<sup>*</sup>
+          </dt>
+          <dd class="stats__description">
+            рублей <br> вложений
+          </dd>
+        </div>
+        <div class="stats__item">
+          <dt class="stats__number">
+            7200
+          </dt>
+          <dd class="stats__description">
+            секунд<br> времени мастера
+          </dd>
+        </div>
+        <div class="stats__item">
+          <dt class="stats__number">
+            90000
+          </dt>
+          <dd class="stats__description">
+            постриженных<br> волос
+          </dd>
+        </div>
+        <div class="stats__item">
+          <dt class="stats__number">
+            500000<sup>*</sup>
+          </dt>
+          <dd class="stats__description">
+            лайков и <br> комплиментов
+          </dd>
+        </div>
+      </dl>
+      <small class="stats__legend stats__legend--button">
+        *-приведенные данные - ложь
+      </small>
+    </section>
+  </main>
 </body>
 
 </html>
