--- a/index.html
+++ b/index.html
@@ -155,6 +155,19 @@
             <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
           </div>
         </blockquote>
+        <blockquote class="reviews__item">
+          <img class="reviews__author--image" src="img/picture-travis-mobile@1x.png" alt="Фото Джона Смита" width="50" height="33">  
+          <div class="reviews__author--info">
+            <cite class="reviews__author--info">Джон Смит</cite>
+            <p class="reviews__text">Отличную стрижку мне сделали ребята!</p>
+          </div>
+        </blockquote>
+        <blockquote class="reviews__item">
+          <img class="reviews__author--image" src="img/picture-travis-mobile@1x.png" alt="Фото Ивана Бородайло" width="50" height="33">  
+          <div class="reviews__author--info">
+            <cite class="reviews__author--info">Иван Бородайло</cite>В Бородинском ваша борода в надежных руках!</p>
+          </div>
+        </blockquote>
       </div>
     </section>
   </main>
