--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
       <a class="copyright__link" href="#">HTML Academy</a>
     </div>
   </footer>
+  <script src="script/index.js"></script>
+  <script src="script/gulpfile.js"></script>
 </body>
-
 </html>
