--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <a href="#">Main</a>
           </li>
           <li class="site-list__item site-list__item--active">
-            <a href="photo.html">Portfolio</a>
+            <a href="photo.html">Photo</a>
           </li>
-          <li class="site-list__item">
+          <li class="site-list__item ">
             <a href="form.html">Form</a>
           </li>
           <li class="site-list__item">
