made some changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h2 class="visually-hidden">Статистика Барбершопа</h2>
           <p class="stats__slogan">Стрижка у нас - это выгодно!</p>
           <p class="stats__intro">Мужская стрижка требует<br> точного подхода. Обратимся <br> к стятистике:</p>
-          <p class="stats__legends stats__legends--top">
+          <p class="stats__legend stats__legend--top">
             <small>*- приведенные данные - ложь</small>
           </p>
         </header>
@@ -94,7 +94,7 @@
             </dd>
           </div>
         </dl>
-        <p class="stats__legen stats__legend--top">
+        <p class="stats__legend stats__legend--bottom">
           <small class="stats__legend stats__legend--bottom">
             *-приведенные данные - ложь
           </small>
